# ms-pacman

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: clang-tidy.yml  cmake.yml
assets/: maze.py  maze.xcf  mazes_to_header.py
cmake/: CompilerWarnings.cmake  ranges.cmake  toolchain.cmake  vcpkg.cmake
dev/: ubuntu.sh  up_to_date_cmake.sh  windows.ps1  windows_winget.ps1
lib/: Blinky.cpp  Board.cpp  CMakeLists.txt  Canvas.cpp  Fruits.cpp  Game.cpp  GameState.cpp  Ghost.cpp  HighScore.cpp  HighScoreFile.cpp  Inky.cpp  InputHandler.cpp  MsPacMan.cpp  NPC_20.cpp  NPC_23.cpp  PacMan.cpp  PacManAI.cpp  PacManAnimation.cpp  Pellets.cpp  Pinky.cpp  SuperPellets.cpp
lib/include/: Atlas.hpp  AtlasFruits.hpp  AtlasGhosts.hpp  AtlasMsPacMan.hpp  Blinky.hpp  Board.hpp  Canvas.hpp  Cheats.hpp  DeltaTimer.hpp  Direction.hpp  Fruit.hpp  Fruits.hpp  Game.hpp  GameState.hpp  Ghost.hpp  GhostBase.hpp  GhostName.hpp  GhostState.hpp  HighScore.hpp  HighScoreFile.hpp  Inky.hpp  InputHandler.hpp  InputState.hpp  Level.hpp  LineStream.hpp  LineViewStream.hpp  Mazes.hpp  MsPacMan.hpp  NPC.hpp  PacManAnimation.hpp  Pellets.hpp  Pinky.hpp  Position.hpp  Score.hpp  String.hpp  StringView.hpp  SuperPellets.hpp  concepts.hpp
scaling-lib/: Scaling.cpp  Scaling.hpp  Scaling.mm
src/: CMakeLists.txt  main.cpp
system-utils/: CMakeLists.txt  Scaling.cpp  Scaling.hpp  Scaling.mm  User.hpp  UserPosix.cpp  UserWin32.cpp
test/: CMakeLists.txt  testBoard.cpp  testFruits.cpp  testGameState.cpp  testGhost.cpp  testHighScore.cpp  testLevels.cpp  testMsPacMan.cpp  testPellets.cpp
test/benchmarks/: line_stream_benchmark.cpp
test/data/: book.txt  highscore.txt
test/exercises/: 31_exercises.cpp  31_exercises.md  32_exercises.cpp  32_exercises.md  33_exercises.cpp  33_exercises.md  34_exercises.cpp  34_exercises.md  35_exercises.cpp  35_exercises.md  36_exercises.cpp  36_exercises.md  37_exercises.cpp  37_exercises.md  38_exercises.cpp  38_exercises.md  41_exercises.cpp  41_exercises.md  42_exercises.cpp  42_exercises.md  43_exercises.cpp  43_exercises.md  44_exercises.cpp  44_exercises.md  45_exercises.cpp  45_exercises.md  46_exercises.cpp  46_exercises.md  47_exercises.cpp  47_exercises.md  48_exercises.cpp  48_exercises.md  README.md  X1_exercises.md  X2_exercises.md  X3_exercises.md  X4_exercises.md  X5_exercises.md
test/unit_tests/: README.md  testCheats.cpp  testFruits.cpp  testGameState.cpp  testGhost.cpp  testHighScore.cpp  testLevels.cpp  testMsPacMan.cpp  testPosition.cpp
